# event-ticketing

./: .gitignore  README.md  docker-compose.yml  kafka-deployment.yaml
.skills/fastapi/: SKILL.md
.skills/langchain/: SKILL.md
.skills/nodejs/: SKILL.md
.skills/postgres/: SKILL.md
.skills/python/: SKILL.md
.skills/reactjs/: SKILL.md
.skills/redis/: SKILL.md
AI-backend/: .env.example  Dockerfile  README.md  fetch_kyn.py  ingest_kyn.py  kyn_events.json  kyn_last_sync_raw.json  kyn_raw_events.json  pyproject.toml  sync_kyn_events.py
AI-backend/app/: __init__.py  main.py
AI-backend/app/api/: routes.py
AI-backend/app/clients/: __init__.py  event_backend.py
AI-backend/app/core/: config.py
AI-backend/app/models/: schemas.py
AI-backend/app/services/: embedder.py  event_documents.py  ingestion_service.py  search_service.py  vector_store.py
AI-backend/eventhub_ai_backend.egg-info/: PKG-INFO  requires.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
backend/src/config/: env.ts  prisma.ts  redis.ts
backend/src/controllers/: auth.controller.ts  events.controller.ts  tickets.controller.ts  upload.controller.ts
backend/src/kafka/: client.ts  topics.ts  (+2 more)
docs/: ai-search-plan.md  ai-search-tasks.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
k8s/: app-stack.yaml
(+39 files in other folders)
