[project]
name = "eventhub-ai-backend"
version = "0.1.0"
description = "FastAPI AI backend for semantic event search with Qdrant and LangChain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "qdrant-client>=1.10.0,<2.0.0",
  "langchain-core>=0.3.0,<1.0.0",
  "langchain-qdrant>=0.2.0,<1.0.0",
  "langchain-openai>=0.2.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
